k8s-configs/ping-cloud/test/pingaccess/ingress.yaml
# This defines the ingress for the pingaccess management console.

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingaccessconsole-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - pingacessconsole-dev.ping-demo.com
    secretName: tls-secret
  rules:
  - host: pingacessconsole-dev.ping-demo.com
    http:
      paths:
        # This rule gives external access to the pingaccess console service
        - path: /
          backend:
            serviceName: pingaccess
            servicePort: 9000
